Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: san-express-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: san-express-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: san-express-app
    spec:
      containers:
        - name: san-express-app
          image: 'sandydevops8/san-express-app:${GIT_SHA}'
          ports:
            - containerPort: 8080
