Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: san-express-service
  labels:
    app: san-express-app
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: san-express-app
  type: NodePort
